--- a/ev_parking_assistant/index.html
+++ b/ev_parking_assistant/index.html
@@ -43,8 +43,8 @@
           // https://docs.microsoft.com/en-us/azure/cognitive-services/authentication#authenticate-with-an-authentication-token
           if (now > expireAfter) {
             expireAfter = now + 300000;
-            lastPromise = fetch('https://webchat-mockbot.azurewebsites.net/speechservices/token', {
-              // lastPromise = fetch('https://ev-parking-assistant-app-service.azurewebsites.net/speechservices/token', {
+            // lastPromise = fetch('https://webchat-mockbot.azurewebsites.net/speechservices/token', {
+              lastPromise = fetch('https://ev-parking-assistant-app-service.azurewebsites.net/speechservices/token', {
               method: 'POST'
             }).then(
               res => res.json(),
@@ -68,8 +68,8 @@
         // Tokens are more secure. To learn about the differences between secrets and tokens.
         // and to understand the risks associated with using secrets, visit https://docs.microsoft.com/en-us/azure/bot-service/rest-api/bot-framework-rest-direct-line-3-0-authentication?view=azure-bot-service-4.0
 
-        const res = await fetch('https://webchat-mockbot.azurewebsites.net/directline/token', { method: 'POST' });
-        // const res = await fetch('https://ev-parking-assistant-app-service.azurewebsites.net/directline/token', { method: 'POST' });
+        // const res = await fetch('https://webchat-mockbot.azurewebsites.net/directline/token', { method: 'POST' });
+        const res = await fetch('https://ev-parking-assistant-app-service.azurewebsites.net/directline/token', { method: 'POST' });
         const { token } = await res.json();
 
         // Create the ponyfill factory function, which can be called to create a concrete implementation of the ponyfill.
